--- a/templates/back/sign-in.html.twig
+++ b/templates/back/sign-in.html.twig
@@ -47,7 +47,7 @@
 								</ul>
 								<ul class="navbar-nav d-lg-block d-none">
 									<li class="nav-item">
-										<a href="https://www.creative-tim.com/product/argon-dashboard" class="btn btn-sm mb-0 me-1 btn-primary">Free Download</a>
+										<a href="https://www.creative-tim.com/product/argon-dashboard" class="btn btn-sm mb-0 me-1 btn-danger">Free Download</a>
 									</li>
 								</ul>
 							</div>
@@ -81,22 +81,22 @@
 												<label class="form-check-label" for="rememberMe">Remember me</label>
 											</div>
 											<div class="text-center">
-												<button type="button" class="btn btn-lg btn-primary btn-lg w-100 mt-4 mb-0">Sign in</button>
+												<button type="button" class="btn btn-lg btn-danger btn-lg w-100 mt-4 mb-0">Sign in</button>
 											</div>
 										</form>
 									</div>
 									<div class="card-footer text-center pt-0 px-lg-2 px-1">
 										<p class="mb-4 text-sm mx-auto">
 											Don't have an account?
-											<a href="javascript:;" class="text-primary text-gradient font-weight-bold">Sign up</a>
+											<a href="javascript:;" class="text-danger text-gradient font-weight-bold">Sign up</a>
 										</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 end-0 text-center justify-content-center flex-column">
-								<div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden" style="background-image: url('https://raw.githubusercontent.com/creativetimofficial/public-assets/master/argon-dashboard-pro/assets/img/signin-ill.jpg');
-																																																																																																								          background-size: cover;">
-									<span class="mask bg-gradient-primary opacity-6"></span>
+								<div class="position-relative bg-gradient-danger h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden" style="background-image: url('https://raw.githubusercontent.com/creativetimofficial/public-assets/master/argon-dashboard-pro/assets/img/signin-ill.jpg');
+																																																																																																																		          background-size: cover;">
+									<span class="mask bg-gradient-danger opacity-6"></span>
 									<h4 class="mt-5 text-white font-weight-bolder position-relative">"Attention is the new currency"</h4>
 									<p class="text-white position-relative">The more effortless the writing looks, the more effort the writer actually put into the process.</p>
 								</div>
