--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -1,133 +1,12 @@
 {% extends 'baseFront.html.twig' %}
 
-{% block pageStyle %}<link href="css/index.css" rel="stylesheet">
+{% block pageStyle %}<link href="{{ asset('css/index.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
 	<body>
 
-		<section id="top">
-			<div class="container">
-				<div class="row top_1">
-					<div class="col-md-3">
-						<div class="top_1l pt-1">
-							<h3 class="mb-0">
-								<a class="text-white" href="index.html.twig">
-									<i class="fa fa-video-camera col_red me-1"></i>
-									Planet</a>
-							</h3>
-						</div>
-					</div>
-					<div class="col-md-5">
-						<div class="top_1m">
-							<div class="input-group">
-								<input type="text" class="form-control bg-black" placeholder="Search Site...">
-								<span class="input-group-btn">
-									<button class="btn btn text-white bg_red rounded-0 border-0" type="button">
-										Search</button>
-								</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="top_1r text-end">
-							<ul class="social-network social-circle mb-0">
-								<li>
-									<a href="#" class="icoRss" title="Rss">
-										<i class="fa fa-instagram"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="icoFacebook" title="Facebook">
-										<i class="fa fa-facebook"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="icoTwitter" title="Twitter">
-										<i class="fa fa-twitter"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="icoGoogle" title="Google +">
-										<i class="fa fa-youtube"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="icoLinkedin" title="Linkedin">
-										<i class="fa fa-linkedin"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section id="header">
-			<nav class="navbar navbar-expand-md navbar-light" id="navbar_sticky">
-				<div class="container">
-					<a class="navbar-brand text-white fw-bold" href="index.html.twig">
-						<i class="fa fa-video-camera col_red me-1"></i>
-						Planet</a>
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav mb-0">
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="index.html.twig">Home</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="about.html.twig">About Us</a>
-							</li>
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Blog
-								</a>
-								<ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
-									<li>
-										<a class="dropdown-item" href="blog.html.twig">Blog</a>
-									</li>
-									<li>
-										<a class="dropdown-item border-0" href="blog_detail.html.twig">Blog Detail</a>
-									</li>
-								</ul>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="services.html.twig">Services</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="team.html.twig">Team</a>
-							</li>
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-									Pages
-								</a>
-								<ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
-									<li>
-										<a class="dropdown-item" href="about.html.twig">About Us</a>
-									</li>
-									<li>
-										<a class="dropdown-item" href="services.html.twig">Services</a>
-									</li>
-									<li>
-										<a class="dropdown-item" href="team.html.twig">Team</a>
-									</li>
-									<li>
-										<a class="dropdown-item border-0" href="contact.html.twig">Contact</a>
-									</li>
-								</ul>
-							</li>
-
-							<li class="nav-item">
-								<a class="nav-link" href="contact.html.twig">Contact Us</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</section>
+		{{ block("header") }}
 
 		<section id="center" class="center_home">
 			<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -2302,198 +2181,7 @@
 			</div>
 		</section>
 
-		<section id="footer">
-			<div class="footer_m clearfix">
-				<div class="container">
-					<div class="row footer_1">
-						<div class="col-md-4">
-							<div class="footer_1i">
-								<h3>
-									<a class="text-white" href="index.html.twig">
-										<i class="fa fa-video-camera col_red me-1"></i>
-										Planet</a>
-								</h3>
-								<p class="mt-3">Lorem ipsum dolor sit amet consect etur adi pisicing elit sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet consect etur.
-								</p>
-								<h6 class="fw-normal">
-									<i class="fa fa-map-marker fs-5 align-middle col_red me-1"></i>
-									5311 Ceaver Sidge Td.
-																																																																																													Pakland, DE 13507</h6>
-								<h6 class="fw-normal mt-3">
-									<i class="fa fa-envelope fs-5 align-middle col_red me-1"></i>
-									info@gmail.com</h6>
-								<h6 class="fw-normal mt-3 mb-0">
-									<i class="fa fa-phone fs-5 align-middle col_red me-1"></i>
-									+123 123 456</h6>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="footer_1i">
-								<h4>Flickr
-									<span class="col_red">Stream</span>
-								</h4>
-								<div class="footer_1i1 row mt-4">
-									<div class="col-md-3 col-3">
-										<div class="footer_1i1i">
-											<div class="grid clearfix">
-												<figure class="effect-jazz mb-0">
-													<a href="#"><img src="{{ asset('img/4.jpg') }}" height="70" class="w-100" alt="abc"></a>
-												</figure>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-3 col-3">
-										<div class="footer_1i1i">
-											<div class="grid clearfix">
-												<figure class="effect-jazz mb-0">
-													<a href="#"><img src="{{ asset('img/5.jpg') }}" height="70" class="w-100" alt="abc"></a>
-												</figure>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-3 col-3">
-										<div class="footer_1i1i">
-											<div class="grid clearfix">
-												<figure class="effect-jazz mb-0">
-													<a href="#"><img src="{{ asset('img/6.jpg') }}" height="70" class="w-100" alt="abc"></a>
-												</figure>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-3 col-3">
-										<div class="footer_1i1i">
-											<div class="grid clearfix">
-												<figure class="effect-jazz mb-0">
-													<a href="#"><img src="{{ asset('img/7.jpg') }}" height="70" class="w-100" alt="abc"></a>
-												</figure>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="footer_1i1 row mt-3">
-									<div class="col-md-3 col-3">
-										<div class="footer_1i1i">
-											<div class="grid clearfix">
-												<figure class="effect-jazz mb-0">
-													<a href="#"><img src="{{ asset('img/8.jpg') }}" height="70" class="w-100" alt="abc"></a>
-												</figure>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-3 col-3">
-										<div class="footer_1i1i">
-											<div class="grid clearfix">
-												<figure class="effect-jazz mb-0">
-													<a href="#"><img src="{{ asset('img/9.jpg') }}" height="70" class="w-100" alt="abc"></a>
-												</figure>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-3 col-3">
-										<div class="footer_1i1i">
-											<div class="grid clearfix">
-												<figure class="effect-jazz mb-0">
-													<a href="#"><img src="{{ asset('img/10.jpg') }}" height="70" class="w-100" alt="abc"></a>
-												</figure>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-3 col-3">
-										<div class="footer_1i1i">
-											<div class="grid clearfix">
-												<figure class="effect-jazz mb-0">
-													<a href="#"><img src="{{ asset('img/11.jpg') }}" height="70" class="w-100" alt="abc"></a>
-												</figure>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="footer_1i">
-								<h4>Sign
-									<span class="col_red">Newsletter</span>
-								</h4>
-								<p class="mt-3">Subscribe to our newsletter list to get latest news and updates from us</p>
-								<div class="input-group">
-									<input type="text" class="form-control bg-black" placeholder="Email">
-									<span class="input-group-btn">
-										<button class="btn btn text-white bg_red rounded-0 border-0" type="button">
-											Subscribe</button>
-									</span>
-								</div>
-								<ul class="social-network social-circle mb-0 mt-4">
-									<li>
-										<a href="#" class="icoRss" title="Rss">
-											<i class="fa fa-instagram"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="icoFacebook" title="Facebook">
-											<i class="fa fa-facebook"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="icoTwitter" title="Twitter">
-											<i class="fa fa-twitter"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="icoGoogle" title="Google +">
-											<i class="fa fa-youtube"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="icoLinkedin" title="Linkedin">
-											<i class="fa fa-linkedin"></i>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section id="footer_b" class="pt-3 pb-3 bg_grey">
-			<div class="container">
-				<div class="row footer_1">
-					<div class="col-md-8">
-						<div class="footer_1l">
-							<p class="mb-0">© 2013 Your Website Name. All Rights Reserved | Design by
-								<a class="col_red" href="http://www.templateonweb.com">TemplateOnWeb</a>
-							</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="footer_1r">
-							<ul class="mb-0">
-								<li class="d-inline-block me-2">
-									<a href="#">Home</a>
-								</li>
-								<li class="d-inline-block me-2">
-									<a href="#">Features</a>
-								</li>
-								<li class="d-inline-block me-2">
-									<a href="#">Pages</a>
-								</li>
-								<li class="d-inline-block me-2">
-									<a href="#">Portfolio</a>
-								</li>
-								<li class="d-inline-block me-2">
-									<a href="#">Blog</a>
-								</li>
-								<li class="d-inline-block">
-									<a href="#">Contact</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+		{{ block("footer") }}
 
 		<script>
 			window.onscroll = function () {
