categoryfilm crud + jointure

--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -26,7 +26,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_actor_index') }}">back to list</a>
+    <a href="{{ referer }}">back to list  </a>
 
     <a href="{{ path('app_actor_edit', {'id': actor.id}) }}">edit</a>
 
